--- a/projects/interiorhealth.html
+++ b/projects/interiorhealth.html
@@ -1,93 +1,123 @@
 <!DOCTYPE html>
 <html lang="en" class="scroll-smooth">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Interior Health | Project Details - Benjamin Alfayo</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = { darkMode: 'class' };
-  </script>
-</head>
-<body class="bg-white dark:bg-gray-900 text-gray-900 dark:text-white transition-colors duration-300 font-sans">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Interior Health - Project Details | Benjamin Alfayo</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <script>
+      tailwind.config = {
+        darkMode: 'class'
+      }
+    </script>
+    <style>
+      @keyframes fadeInUp {
+        from {
+          opacity: 0;
+          transform: translateY(20px);
+        }
+        to {
+          opacity: 1;
+          transform: translateY(0);
+        }
+      }
+      .animate-fadeInUp {
+        animation: fadeInUp 0.8s ease forwards;
+      }
+    </style>
+  </head>
+  <body class="bg-white dark:bg-gray-900 text-gray-800 dark:text-white transition-colors duration-300">
+    <div class="max-w-4xl mx-auto px-6 py-10">
+      <header class="text-center mb-10 animate-fadeInUp" style="animation-delay: 0.1s;">
+        <h1 class="text-4xl font-bold mb-2">💊 Interior Health</h1>
+        <p class="text-lg text-gray-600 dark:text-gray-300">
+          A full-stack digital health logistics platform connecting rural patients to essential drugs via health workers and clinics.
+        </p>
+        <a
+          href="https://interiorhealth-vol2.vercel.app"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="inline-block mt-4 px-6 py-2 bg-blue-600 text-white rounded shadow hover:bg-blue-700 transition duration-300"
+        >
+          🚀 View Live Site
+        </a>
+      </header>
 
-  <header class="max-w-4xl mx-auto p-6 border-b border-gray-300 dark:border-gray-700 flex justify-between items-center">
-    <h1 class="text-3xl font-bold">Interior Health</h1>
-    <a href="/" class="text-blue-600 dark:text-blue-400 hover:underline">← Back to Portfolio</a>
-  </header>
+      <section class="mb-12 animate-fadeInUp" style="animation-delay: 0.3s;">
+        <h2 class="text-2xl font-semibold mb-4">📝 Project Overview</h2>
+        <p class="mb-4">
+          Interior Health addresses the critical challenge of medicine accessibility in underserved rural regions of Kenya by digitizing the drug ordering, tracking, and payment processes for patients, health workers, and clinics.
+        </p>
+        <p class="mb-4">
+          This platform empowers Community Health Extension Workers (CHEWs) by providing real-time inventory management, role-based access control, and seamless integration with M-Pesa for payments — all designed to streamline healthcare delivery and improve patient outcomes.
+        </p>
+      </section>
 
-  <main class="max-w-4xl mx-auto p-6 space-y-6">
+      <section class="mb-12 animate-fadeInUp" style="animation-delay: 0.5s;">
+        <h2 class="text-2xl font-semibold mb-6">📸 Screenshots</h2>
 
-    <section>
-      <h2 class="text-2xl font-semibold mb-2">Project Summary</h2>
-      <p>
-        A digital health logistics and ordering platform that connects rural patients with essential drugs through health workers and clinics.
-      </p>
-    </section>
+        <figure class="mb-8">
+          <img src="./images/interior1.png" alt="Interior Health Dashboard overview showing patient list and order statuses" class="rounded shadow w-full max-w-xl mx-auto" />
+          <figcaption class="text-center text-sm text-gray-600 dark:text-gray-400 mt-2">
+            Interior Health Dashboard overview showing patient list and order statuses.
+          </figcaption>
+        </figure>
 
-    <section>
-      <h2 class="text-2xl font-semibold mb-2">Problem Statement</h2>
-      <p>
-        In interior rural regions, patients have limited access to affordable healthcare drugs. This project aims to digitize and streamline the ordering and delivery process, improving access and transparency.
-      </p>
-    </section>
+        <figure class="mb-8">
+          <img src="./images/interior2.png" alt="Drug ordering interface for patients and health workers" class="rounded shadow w-full max-w-xl mx-auto" />
+          <figcaption class="text-center text-sm text-gray-600 dark:text-gray-400 mt-2">
+            Drug ordering interface for patients and health workers.
+          </figcaption>
+        </figure>
 
-    <section>
-      <h2 class="text-2xl font-semibold mb-2">Tech Stack</h2>
-      <ul class="list-disc list-inside">
-        <li>Django REST Framework (Backend API)</li>
-        <li>React + Tailwind CSS (Frontend)</li>
-        <li>PostgreSQL (Database)</li>
-        <li>WebSocket (Real-time updates)</li>
-        <li>Docker (Containerization)</li>
-        <li>M-Pesa API (Payment integration)</li>
-      </ul>
-    </section>
+        <figure class="mb-8">
+          <img src="./images/interior3.png" alt="Responsive mobile view of the Interior Health app" class="rounded shadow w-full max-w-xl mx-auto" />
+          <figcaption class="text-center text-sm text-gray-600 dark:text-gray-400 mt-2">
+            Responsive mobile view of the Interior Health app.
+          </figcaption>
+        </figure>
 
-    <section>
-      <h2 class="text-2xl font-semibold mb-2">Features</h2>
-      <ul class="list-disc list-inside">
-        <li>Role-based authentication (Admin, Health Worker, Patient)</li>
-        <li>Medicine search and ordering</li>
-        <li>Real-time order status tracking</li>
-        <li>Payment integration via M-Pesa</li>
-        <li>Delivery tracking and notifications</li>
-      </ul>
-    </section>
+        <figure class="mb-8">
+          <img src="./images/interior4.png" alt="Real-time order tracking dashboard for health workers" class="rounded shadow w-full max-w-xl mx-auto" />
+          <figcaption class="text-center text-sm text-gray-600 dark:text-gray-400 mt-2">
+            Real-time order tracking dashboard for health workers.
+          </figcaption>
+        </figure>
+      </section>
 
-    <section>
-      <h2 class="text-2xl font-semibold mb-2">Challenges & Solutions</h2>
-      <p>
-        Implementing real-time updates with WebSocket in a scalable way was a major challenge. We overcame this by structuring backend event handling with async workers and ensuring the frontend seamlessly handles connection drops.
-      </p>
-    </section>
+      <section class="mb-12 animate-fadeInUp" style="animation-delay: 0.7s;">
+        <h2 class="text-2xl font-semibold mb-4">🛠️ Tech Stack & Features</h2>
+        <ul class="list-disc pl-6 space-y-2 text-gray-700 dark:text-gray-300">
+          <li>Backend: Django REST Framework with PostgreSQL database</li>
+          <li>Frontend: React, Tailwind CSS, and WebSocket for real-time updates</li>
+          <li>Authentication: JWT-based role-based access control for Admin, Health Worker, and Patient roles</li>
+          <li>Payments: Integrated with M-Pesa for secure mobile money transactions</li>
+          <li>Deployment: Backend hosted on Railway, Frontend on Vercel with CI/CD via GitHub Actions</li>
+          <li>Features: Drug search, order placement, order tracking, user account management, and responsive design</li>
+        </ul>
+      </section>
 
-    <section>
-      <h2 class="text-2xl font-semibold mb-2">Impact</h2>
-      <p>
-        Currently used by Community Health Extension Workers in Makueni County, improving medicine access and order transparency for over 100 users. Plans to scale to other underserved locations are underway.
-      </p>
-    </section>
+      <section class="mb-12 animate-fadeInUp" style="animation-delay: 0.9s;">
+        <h2 class="text-2xl font-semibold mb-4">🌍 Impact & Next Steps</h2>
+        <p class="mb-4">
+          The Interior Health app is actively used by Community Health Extension Workers (CHEWs) in Makueni County, Kenya, improving drug accessibility for over 100 users in rural areas.
+        </p>
+        <p class="mb-4">
+          Next steps include expanding to additional underserved regions, enhancing chatbot healthcare support, and adding multi-language support to increase accessibility.
+        </p>
+      </section>
 
-    <section>
-      <h2 class="text-2xl font-semibold mb-2">Screenshots</h2>
-      <img src="/images/interiorhealth-dashboard.png" alt="Interior Health Dashboard" class="rounded shadow max-w-full" />
-      
-    </section>
+      <footer class="text-center py-6 text-sm text-gray-600 dark:text-gray-400">
+        © 2025 Benjamin Alfayo.
+      </footer>
+    </div>
 
-    <section class="pt-4 border-t border-gray-300 dark:border-gray-700">
-      <a href="https://interiorhealth-vol2.vercel.app" target="_blank" rel="noopener" class="text-blue-600 dark:text-blue-400 hover:underline mr-6">🔗 Live Demo</a>
-      <a href="https://github.com/Jujutsualfayo/interiorhealth_vol2" target="_blank" rel="noopener" class="text-blue-600 dark:text-blue-400 hover:underline">📂 GitHub Repo</a>
-    </section>
-
-  </main>
-
-  <footer class="text-center p-6 text-sm text-gray-600 dark:text-gray-400">
-    © 2025 Benjamin Alfayo
-  </footer>
-
-  <script>
-    // Dark mode toggle persistence 
-  </script>
-</body>
+    <script>
+      // Optional: Dark mode persistence script (if using Tailwind dark mode)
+      const htmlEl = document.documentElement;
+      if (localStorage.getItem('theme') === 'dark') {
+        htmlEl.classList.add('dark');
+      }
+    </script>
+  </body>
 </html>
