--- a/projects/interiorhealth.html
+++ b/projects/interiorhealth.html
@@ -57,28 +57,28 @@
         <h2 class="text-2xl font-semibold mb-6">📸 Screenshots</h2>
 
         <figure class="mb-8">
-          <img src="./images/interior1.png" alt="Interior Health Dashboard overview showing patient list and order statuses" class="rounded shadow w-full max-w-xl mx-auto" />
+          <img src="images/interior1.png" alt="Interior Health Dashboard overview showing patient list and order statuses" class="rounded shadow w-full max-w-xl mx-auto" />
           <figcaption class="text-center text-sm text-gray-600 dark:text-gray-400 mt-2">
             Interior Health Dashboard overview showing patient list and order statuses.
           </figcaption>
         </figure>
 
         <figure class="mb-8">
-          <img src="./images/interior2.png" alt="Drug ordering interface for patients and health workers" class="rounded shadow w-full max-w-xl mx-auto" />
+          <img src="images/interior2.png" alt="Drug ordering interface for patients and health workers" class="rounded shadow w-full max-w-xl mx-auto" />
           <figcaption class="text-center text-sm text-gray-600 dark:text-gray-400 mt-2">
             Drug ordering interface for patients and health workers.
           </figcaption>
         </figure>
 
         <figure class="mb-8">
-          <img src="./images/interior3.png" alt="Responsive mobile view of the Interior Health app" class="rounded shadow w-full max-w-xl mx-auto" />
+          <img src="images/interior3.png" alt="Responsive mobile view of the Interior Health app" class="rounded shadow w-full max-w-xl mx-auto" />
           <figcaption class="text-center text-sm text-gray-600 dark:text-gray-400 mt-2">
             Responsive mobile view of the Interior Health app.
           </figcaption>
         </figure>
 
         <figure class="mb-8">
-          <img src="./images/interior4.png" alt="Real-time order tracking dashboard for health workers" class="rounded shadow w-full max-w-xl mx-auto" />
+          <img src="images/interior4.png" alt="Real-time order tracking dashboard for health workers" class="rounded shadow w-full max-w-xl mx-auto" />
           <figcaption class="text-center text-sm text-gray-600 dark:text-gray-400 mt-2">
             Real-time order tracking dashboard for health workers.
           </figcaption>
