--- a/index.html
+++ b/index.html
@@ -55,10 +55,27 @@
       </p>
     </section>
 
+    <!-- Why I'm a Great Addition Section -->
+    <section
+      class="max-w-3xl mx-auto px-4 py-10 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-lg animate-fadeInUp"
+      style="animation-delay: 0.5s;"
+    >
+      <h2 class="text-3xl font-semibold mb-6 text-center text-gray-900 dark:text-white">💡 Why I'm a Great Addition to Your Team</h2>
+      <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
+        My professional journey began in Disaster Risk Reduction (DRR), where I gained hands-on experience working in high-stakes, complex environments. This background gave me a strong foundation in problem-solving, adaptability, and empathy—skills that are essential when designing impactful software solutions.
+      </p>
+      <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
+        Transitioning into Software Engineering was a deliberate and determined move. I immersed myself in mastering core computer science principles, backend and frontend development, cloud infrastructure, and DevOps best practices. My dedication means that I’m not just switching careers—I’m competing confidently alongside traditional Computer Science graduates.
+      </p>
+      <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
+        Combining my DRR insights with solid technical expertise allows me to build software that truly understands and meets the needs of users, especially in healthcare and community development. I bring passion, resilience, and a commitment to excellence to every project and team I join.
+      </p>
+    </section>
+
     <!-- Projects Section -->
     <section
       class="max-w-4xl mx-auto px-4 py-8 animate-fadeInUp"
-      style="animation-delay: 0.5s;"
+      style="animation-delay: 0.7s;"
     >
       <h2 class="text-2xl font-semibold mb-6">🚀 Featured Projects</h2>
       <div class="grid md:grid-cols-3 gap-6">
@@ -120,7 +137,7 @@
     <!-- Resume Section -->
     <section
       class="max-w-xl mx-auto px-4 py-8 text-center animate-fadeInUp"
-      style="animation-delay: 0.7s;"
+      style="animation-delay: 0.9s;"
     >
       <h2 class="text-2xl font-semibold mb-4">📄 Resume</h2>
       <p class="mb-4">Want to know more about my background and skills?</p>
@@ -136,7 +153,7 @@
     <!-- Contact -->
     <section
       class="max-w-xl mx-auto px-4 py-8 text-center animate-fadeInUp"
-      style="animation-delay: 0.9s;"
+      style="animation-delay: 1.1s;"
     >
       <h2 class="text-2xl font-semibold mb-4">📬 Get in Touch</h2>
       <p>Feel free to reach out to me via my socials or check out my work below.</p>
