--- a/index.html
+++ b/index.html
@@ -62,10 +62,10 @@
     >
       <h2 class="text-3xl font-semibold mb-6 text-center text-gray-900 dark:text-white">💡 Why I'm a Great Addition to Your Team</h2>
       <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
-        My professional journey began in Disaster Risk Reduction (DRR), where I gained hands-on experience working in high-stakes, complex environments. This background gave me a strong foundation in problem-solving, adaptability, and empathy—skills that are essential when designing impactful software solutions.
+        My professional journey began in Disaster Risk Reduction (DRR), where I gained hands-on experience working in high-stakes, complex environments. This background gave me a strong foundation in problem solving, adaptability, and empathy skills that are essential when designing impactful software solutions.
       </p>
       <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
-        Transitioning into Software Engineering was a deliberate and determined move. I immersed myself in mastering core computer science principles, backend and frontend development, cloud infrastructure, and DevOps best practices. My dedication means that I’m not just switching careers—I’m competing confidently alongside traditional Computer Science graduates.
+        Transitioning into Software Engineering was a deliberate and determined move. I enrolled to the Africa Leardership Experience & immersed myself in mastering core computer science principles, backend and frontend development, cloud infrastructure, and DevOps best practices. My dedication means that I am not just switching careers but competing confidently alongside traditional Computer Science gurus.
       </p>
       <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
         Combining my DRR insights with solid technical expertise allows me to build software that truly understands and meets the needs of users, especially in healthcare and community development. I bring passion, resilience, and a commitment to excellence to every project and team I join.
