--- a/index.html
+++ b/index.html
@@ -56,21 +56,25 @@
     </section>
 
     <!-- Why I'm a Great Addition Section -->
-    <section
-      class="max-w-3xl mx-auto px-4 py-10 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-lg animate-fadeInUp"
-      style="animation-delay: 0.5s;"
-    >
-      <h2 class="text-3xl font-semibold mb-6 text-center text-gray-900 dark:text-white">💡 Why I'm a Great Addition to Your Team</h2>
-      <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
-        My professional journey began in Disaster Risk Reduction (DRR), where I gained hands-on experience working in high-stakes, complex environments. This background gave me a strong foundation in problem solving, adaptability, and empathy skills that are essential when designing impactful software solutions.
-      </p>
-      <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
-        Transitioning into Software Engineering was a deliberate and determined move. I enrolled to the Africa Leardership Experience & immersed myself in mastering core computer science principles, backend and frontend development, cloud infrastructure, and DevOps best practices. My dedication means that I am not just switching careers but competing confidently alongside traditional Computer Science gurus.
-      </p>
-      <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
-        Combining my DRR insights with solid technical expertise allows me to build software that truly understands and meets the needs of users, especially in healthcare and community development. I bring passion, resilience, and a commitment to excellence to every project and team I join.
-      </p>
-    </section>
+<section
+  class="max-w-3xl mx-auto px-4 py-10 bg-gray-50 dark:bg-gray-800 rounded-lg shadow-lg animate-fadeInUp"
+  style="animation-delay: 0.5s;"
+>
+  <h2 class="text-3xl font-semibold mb-6 text-center text-gray-900 dark:text-white">💡 Why I'm a Great Addition to Your Team</h2>
+  
+  <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
+    As a Full Stack Software Engineer, I specialize in building scalable backend systems, crafting intuitive front-end interfaces, and designing cloud-native architectures that meet real-world demands. My expertise spans backend and frontend development, API design, DevOps best practices, and cloud infrastructure deployment.
+  </p>
+
+  <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
+    I approach every project with a problem-solving mindset, combining strong analytical skills with creativity to deliver efficient, maintainable, and user-focused solutions. My experience working on impactful projects such as <em>Interior Health</em> demonstrates my ability to design and deploy software that improves accessibility and makes a tangible difference in people's lives.
+  </p>
+
+  <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
+    I bring a blend of technical mastery, adaptability, and a passion for innovation—qualities that enable me to quickly integrate into teams, drive projects forward, and consistently deliver results that exceed expectations.
+  </p>
+</section>
+
 
     <!-- Projects Section -->
     <section
