--- a/index.html
+++ b/index.html
@@ -45,15 +45,22 @@
     </header>
 
     <!-- About Section -->
-    <section
-      class="max-w-2xl mx-auto px-4 py-8 animate-fadeInUp"
-      style="animation-delay: 0.3s;"
-    >
-      <h2 class="text-2xl font-semibold mb-4">📘 About Me</h2>
-      <p>
-        I'm a passionate Full Stack Software Engineer skilled in curating scalable backend systems, web applications and solving real-world problems with clean code.
-      </p>
-    </section>
+<section
+  class="max-w-2xl mx-auto px-4 py-8 animate-fadeInUp"
+  style="animation-delay: 0.3s;"
+>
+  <h2 class="text-2xl font-semibold mb-4">📘 About Me</h2>
+  <p class="text-gray-700 dark:text-gray-300 leading-relaxed">
+    I am a dedicated Software Engineer with a passion for designing and developing high quality applications that solve real-world problems. My expertise covers backend architecture, RESTful and GraphQL API development, modern frontend frameworks, and cloud-based deployments. 
+  </p>
+  <p class="text-gray-700 dark:text-gray-300 mt-4 leading-relaxed">
+    I thrive on turning ideas into functional, scalable solutions—whether building from scratch or optimizing existing systems. I prioritize clean, maintainable code, performance, and a seamless user experience in every project I undertake.
+  </p>
+  <p class="text-gray-700 dark:text-gray-300 mt-4 leading-relaxed">
+    Beyond technical skills, I bring strong collaboration, adaptability, and a problem-solving mindset that helps teams deliver impactful software on time and at scale.
+  </p>
+</section>
+
 
     <!-- Why I'm a Great Addition Section -->
 <section
@@ -63,7 +70,7 @@
   <h2 class="text-3xl font-semibold mb-6 text-center text-gray-900 dark:text-white">💡 Why I'm a Great Addition to Your Team</h2>
   
   <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
-    As a Full Stack Software Engineer, I specialize in building scalable backend systems, crafting intuitive front-end interfaces, and designing cloud-native architectures that meet real-world demands. My expertise spans backend and frontend development, API design, DevOps best practices, and cloud infrastructure deployment.
+    As a Full Stack Software Engineer, I specialize in building scalable backend systems, crafting intuitive front-end interfaces, and designing cloud native architectures that meet real-world demands. My expertise spans backend and frontend development, API design, DevOps best practices, and cloud infrastructure deployment.
   </p>
 
   <p class="text-gray-700 dark:text-gray-300 mb-4 leading-relaxed">
